# OpenSpeedy

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  OpenSpeedy_en_US.ts  OpenSpeedy_zh_CN.ts  OpenSpeedy_zh_TW.ts  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  build32.bat  build64.bat  config.h  cpuutils.cpp  cpuutils.h  icons.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memutils.cpp  memutils.h  mml.cpp  mml.h  preferencedialog.cpp  preferencedialog.h  preferencedialog.ui  processmonitor.cpp  processmonitor.h  qsinglekeysequenceedit.cpp  qsinglekeysequenceedit.h  resources.qrc  shellcode_array32.h  shellcode_array64.h  taskscheduler.cpp  taskscheduler.h  windbg.h  winutils.cpp  winutils.h
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  package.yml  sign.yml
.signpath/policies/OpenSpeedy/: test-signing.yml
Bridge/: main.cpp
bridge/: CMakeLists.txt  main.cpp
docs/: README_cn.md  README_en.md  README_ja.md
installer/: create_installer.bat
installer/config/: config.xml
script/: build32.bat  build64.bat  initenv.bat
speedpatch/: CMakeLists.txt  SpeedPatch_global.h  shareddouble.cpp  shareddouble.h  speedpatch.cpp  speedpatch.h  vcpkg.json
translations/: OpenSpeedy_en_US.qm  OpenSpeedy_zh_TW.qm
